Comments and Tags (#16)
* Removed payment model due to redundancy

* Refactor of controllers and routes

* Fix for private lists

* Comments and tags controllers

* Updated api docs to match new controllers and routes
