# back-end/src/docs/swagger.yaml
@@ -12,6 +12,10 @@ tags:
   description: Subscriptions management
 - name: Movies
   description: Search movies, get movie details, get movie links, and movie management
+- name: Tags
+  description: Tag management
+- name: Comments
+  description: Comment management
 paths:
   /users:
     get:
@@ -391,6 +395,235 @@ paths:
                 $ref: "#/components/schemas/List"
         "404":
           description: The list does not exist
+        "400":
+          description: The request is invalid
+  /tags:
+    get:
+      tags:
+      - Tags
+      summary: Get all tags
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Tag"
+        "400":
+          description: The request is invalid
+    post:
+      tags:
+      - Tags
+      summary: Create a new tag
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Action
+      responses:
+        "201":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        "409":
+          description: A tag with that name already exists
+        "400":
+          description: The request is invalid
+  /tags/:tagUUID:
+    get: 
+      tags:
+      - Tags
+      summary: Get a tag by tag uuid
+      parameters:
+        - name: tagUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        "404":
+          description: The tag does not exist
+        "400":
+          description: The request is invalid
+    put:
+      tags:
+      - Tags
+      summary: Update a tag by tag uuid
+      parameters:
+        - name: tagUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Action
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        "404":
+          description: The tag does not exist
+        "400":
+          description: The request is invalid
+    delete:
+      tags:
+      - Tags
+      summary: Delete a tag by tag uuid
+      parameters:
+        - name: tagUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        "404":
+          description: The tag does not exist
+        "400":
+          description: The request is invalid
+  /comments/:movieUUID:
+    get:
+      tags:
+      - Comments
+      summary: Get all comments for a movie
+      parameters:
+        - name: movieUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Comment"
+        "404":
+          description: The movie does not exist
+        "400":
+          description: The request is invalid
+    post:
+      tags:
+      - Comments
+      summary: Create a new comment for a movie
+      parameters:
+        - name: movieUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                text:
+                  type: string
+                  example: This is a comment
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Comment"
+        "404":
+          description: The movie does not exist
+        "400":
+          description: The request is invalid
+  /comments/:commentUUID/:userUUID:
+    put:
+      tags:
+      - Comments
+      summary: Update a comment by comment uuid
+      parameters:
+        - name: commentUUID
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: userUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                text:
+                  type: string
+                  example: This is a comment
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Comment"
+        "404":
+          description: The comment does not exist
+        "400":
+          description: The request is invalid
+    delete:
+      tags:
+      - Comments
+      summary: Delete a comment by comment uuid
+      parameters:
+        - name: commentUUID
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: userUUID
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Comment"
+        "404":
+          description: The comment does not exist
         "400":
           description: The request is invalid
   /movies:
@@ -877,4 +1110,50 @@ components:
           items:
               type: string
               example: Adrian Rawlins, Alec Rosenthal, Artjom Gilz
-              
+    Comment:
+      type: object
+      properties:
+        UUID:
+          type: string
+          format: uuid
+          example: 3fa85f64-5719-4562-b3fc-2c963f66afa6
+        authorUUID:
+          type: string
+          format: uuid
+          example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+        movieUUID:
+          type: string
+          format: uuid
+          example: 1937a756-f392-4218-b9db-8c078c8bfbc0
+        tags:
+          type: array
+          items:
+              type: string
+              example: Drama
+        text:
+          type: string
+          example: This is a comment
+        isPrivate:
+          type: boolean
+          example: false
+        createdAt:
+          type: string
+          format: date-time
+          example: 2022-03-27T23:03:13.652+00:00
+        updatedAt:
+          type: string
+          format: date-time
+          example: 2022-03-28T02:16:03.133+00:00
+    Tag:
+      type: object
+      properties:
+        UUID:
+          type: string
+          format: uuid
+          example: 3fa85f64-5719-4562-b3fc-2c963f66afa6
+        name:
+          type: string
+          example: Drama
+        count:
+          type: integer
+          example: 1
